updated all documentation for pantry items/getFood
