# swagger.yaml
@@ -680,7 +680,7 @@ paths:
           $ref: "#/components/responses/NotFoundError"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
-  /foods/{barcode}:
+  /foods/getFood/{barcode}:
     parameters:
         - in: path
           name: barcode
@@ -724,6 +724,208 @@ paths:
           $ref: "#/components/responses/NotFoundError"
         "400":
           $ref: "#/components/responses/InvalidInput"
+  /foods/addPantryItem:
+    post:
+      summary: add a food item to the pantry of the user, user is specified through userId
+      tags: 
+        - foods
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: "16"
+                barcode:
+                  type: string
+                  example: "3327272107259"
+                quantity: 
+                  type: integer
+                  example: 5
+      responses:
+        "200":
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    message: string
+                    example: "Pantry item added successfully"
+    
+  /foods/getPantry:
+    get:
+      summary: get all the food items listed under a userid's pantry. Request can be an integer or string, doesn't matter. Response will always be an integer.
+      tags: 
+        - foods
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: "16"
+      responses:
+        "200":
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    foodid:
+                      type: string
+                      example: "0072250020756"
+                    quantity:
+                      type: integer
+                      example: 1
+                    product_name:
+                      type: string
+                      example: "Thick Sliced Multigrain Bread"
+                    image: 
+                      type: string
+                      example: "https://images.openfoodfacts.org/images/products/007/225/002/0756/front_en.8.200.jpg"
+                    food_group:
+                      type: string
+                      example: "en:bread"
+                    accountId: integer
+                      type: 16
+
+                    
+  /foods/addPantryItem:
+    post:
+      summary: add a food item to the pantry of the user, user is specified through id. again, id can be string or int
+      tags: 
+        - foods
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: "16"
+                barcode:
+                  type: string
+                  example: "3327272107259"
+                quantity: 
+                  type: integer
+                  example: 5
+      responses:
+        "200":
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    message: string
+                    example: "Pantry item added successfully"
+        "400":
+          description: this was already registered before, with the same account.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message: string
+                    example: "The pantry item Peanut butter creamy is already registered under this account"
+          
+
+  /foods/updatePantryItem:
+    delete:
+      tags: 
+        - foods
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: "16"
+                barcode:
+                  type: string
+                  example: "3327272107259"
+                quantity:
+                  type: integer
+                  example: 5
+      responses:
+        "200":
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id: integer
+        "404":
+          description: the pantry item wasn't found for that user.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "pantry item not found"
+  /foods/deletePantryItem:
+    put:
+      tags: 
+        - foods
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: "16"
+                barcode:
+                  type: string
+                  example: "3327272107259"
+      responses:
+        "200":
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    message: string
+                    example: "Pantry item deleted"
+        "404":
+          description: the pantry item wasn't found for that user.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "pantry item not found"
 
 components:
   securitySchemes:
